--- a/monitoring/homeassistant/automations/automations.yaml
+++ b/monitoring/homeassistant/automations/automations.yaml
@@ -428,12 +428,14 @@
   max: 10
 - id: '1769300000001'
   alias: WAN Starlink Offline Notification
-  description: Notify when Starlink (wan1) goes offline for more than 1 minute
+  description: Notify when Starlink (wan1) goes offline or unknown for more than 1 minute
   triggers:
   - trigger: state
     entity_id:
     - sensor.mesh_node_gw_office_wan1_status
-    from: 'online'
+    to:
+    - 'offline'
+    - 'unknown'
     for:
       minutes: 1
   conditions: []
@@ -441,16 +443,18 @@
   - action: notify.mobile_app_blue17
     data:
       title: Starlink Offline
-      message: Starlink (eth1) has been offline for over 1 minute
+      message: "Starlink (eth1) is {{ states('sensor.mesh_node_gw_office_wan1_status') }} for over 1 minute"
   mode: single
 - id: '1769300000002'
   alias: WAN T-Mobile Offline Notification
-  description: Notify when T-Mobile (wan2) goes offline for more than 1 minute
+  description: Notify when T-Mobile (wan2) goes offline or unknown for more than 1 minute
   triggers:
   - trigger: state
     entity_id:
     - sensor.mesh_node_gw_office_wan2_status
-    from: 'online'
+    to:
+    - 'offline'
+    - 'unknown'
     for:
       minutes: 1
   conditions: []
@@ -458,7 +462,7 @@
   - action: notify.mobile_app_blue17
     data:
       title: T-Mobile Offline
-      message: T-Mobile (eth2) has been offline for over 1 minute
+      message: "T-Mobile (eth2) is {{ states('sensor.mesh_node_gw_office_wan2_status') }} for over 1 minute"
   mode: single
 - id: '1769300000003'
   alias: WAN Back Online Notification
