Fix bar lights button automation - add event_type filter

--- a/monitoring/homeassistant/automations/bar_lights_button.yaml
+++ b/monitoring/homeassistant/automations/bar_lights_button.yaml
@@ -6,6 +6,9 @@
       event_type: event
       event_data:
         entity_id: event.bar_lights_button_up
+  condition:
+    - condition: template
+      value_template: "{{ trigger.event.data.get('event_type') in ['multi_press_1', 'long_press'] }}"
   action:
     - service: light.turn_on
       target:
@@ -20,6 +23,9 @@
       event_type: event
       event_data:
         entity_id: event.bar_lights_button_down
+  condition:
+    - condition: template
+      value_template: "{{ trigger.event.data.get('event_type') in ['multi_press_1', 'long_press'] }}"
   action:
     - service: light.turn_off
       target:
