--- a/monitoring/homeassistant/automations/bar_lights_button.yaml
+++ b/monitoring/homeassistant/automations/bar_lights_button.yaml
@@ -2,13 +2,12 @@
   alias: Bar Lights Button - Turn On
   description: Turn on bar lights when button UP is pressed
   trigger:
-    - platform: event
-      event_type: event
+    - platform: state
+      entity_id: event.bar_lights_button_up
   condition:
     - condition: template
       value_template: >
-        {{ trigger.event.data.entity_id == 'event.bar_lights_button_up'
-           and trigger.event.data.get('event_type') in ['multi_press_1', 'long_press'] }}
+        {{ trigger.to_state.attributes.event_type == 'multi_press_1' }}
   action:
     - service: light.turn_on
       target:
@@ -19,13 +18,12 @@
   alias: Bar Lights Button - Turn Off
   description: Turn off bar lights when button DOWN is pressed
   trigger:
-    - platform: event
-      event_type: event
+    - platform: state
+      entity_id: event.bar_lights_button_down
   condition:
     - condition: template
       value_template: >
-        {{ trigger.event.data.entity_id == 'event.bar_lights_button_down'
-           and trigger.event.data.get('event_type') in ['multi_press_1', 'long_press'] }}
+        {{ trigger.to_state.attributes.event_type == 'multi_press_1' }}
   action:
     - service: light.turn_off
       target:
