Fix button2 automation - clean up YAML template syntax

--- a/monitoring/homeassistant/automations/automations.yaml
+++ b/monitoring/homeassistant/automations/automations.yaml
@@ -288,8 +288,7 @@
     entity_id: event.button2
   condition:
   - condition: template
-    value_template: "{{ trigger.to_state is not none\n   and trigger.to_state.attributes.event_type
-      == 'multi_press_1' }}\n"
+    value_template: "{{ trigger.to_state.attributes.event_type == 'multi_press_1' }}"
   action:
   - service: light.toggle
     target:
